@@ -1,5 +1,11 @@
 2007-07-31  David Gilbert  <david.gilbert@object-refinery.com>
 
+	Bug 1763413:
+	* source/org/jfree/chart/axis/PeriodAxis.java
+	(drawTickLabels): Calculate tick label width correctly for inverted axis.
+
+2007-07-31  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/renderer/category/StackedBarRenderer3D.java
 	(ignoreZeroValues): New field,
 	(getIgnoreZeroValues): New method,
